--- a/bakteri/pubspec.yaml
+++ b/bakteri/pubspec.yaml
@@ -40,9 +40,12 @@ dependencies:
   path_provider: ^2.1.2
   provider: ^6.0.5
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+
+  intl_phone_number_input: ^0.7.0
 
 dev_dependencies:
   flutter_test:
